Closed Bug 394387 Opened 17 years ago Closed 17 years ago

Only cells with expanders should have STATE_EXPANDABLE and expand/collapse actions

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file, 1 obsolete file)

Steps to reproduce:

1. Launch Accerciser and open the FF Bookmarks manager

2. Use Accerciser's Interface Viewer to examine the cells in the row containing "Mozilla Firefox" *in the scroll pane on the right* (i.e. the four-columned table).

Expected results: Only the cell that contains the expander (i.e. "Mozilla Firefox" in the Name column) would have STATE_EXPANDABLE and expand/collapse actions.

Actual results:  All cells in that row have STATE_EXPANDABLE and the associated expand/collapse actions.
I just did a quick check in the Bookmarks manager and it works very nicely there.  Building Thunderbird now....

Thanks Aaron!!
I don't see any differences (i.e. regressions) in Thunderbird.
Attachment #279265 - Flags: review?(Evan.Yan) → review+
Attachment #279265 - Flags: approval1.9?
Attachment #279265 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: