Bug 394387.  Only cells with expanders should have STATE_EXPANDABLE and expand/collapse actions. r=evan.yan, a=dsicore